--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,4 +24,4 @@ jobs:
       with:
         subject: 'Review pull request'
         body: 'A new PR has been submitted on ${{ github.repository }} from ${{ github.actor }}. Please review it <a href="${{ github.event.pull_request._links.html.href }}">here</a>.'
-        emailaddress: 'user@contoso.onmicrosoft.com'
+        emailaddress: 'anoop@anoopccdev1.onmicrosoft.com'
